@@ -542,8 +542,8 @@ function GotoCat(cat) {
 <tr><td align=center><font color=black><font face=Tahoma style="font-size:8pt;">[TxtUpload]: Max [MaxUpload] [KByteSec], [TxtTime]: [ScaleTime]</font><br>&nbsp;</td></tr>
 <tr><td style="border-width:1px; border-color:blue; border-style:solid;" valign="bottom" height="150px" background="back.gif">
 <SCRIPT language=JavaScript>
-	var ulstring="[GraphConnections]";
-	traceGraph(ulstring,"GraphCon.gif",[MaxConnections]);
+	var connstring="[GraphConnections]";
+	traceGraph(connstring,"GraphCon.gif",[MaxConnections]);
 </SCRIPT>
 </td></tr>
 <tr><td align=center><font color=black><font face=Tahoma style="font-size:8pt;">[TxtConnections]: Max [MaxConnections], [TxtTime]: [ScaleTime]</font></td></tr>
